--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -26,7 +26,7 @@
 				 <div class="section-title">
 		          <span>MAP</span>
 		          <h2>MAP</h2>
-		          <p><strong>가고 싶은 관광지를 클릭하면 반경 nkm 이내의 관광지가 모두 표시됩니다!</strong></p>
+		          <p><strong>가고 싶은 관광지를 클릭하면 반경 10km 이내의 관광지가 모두 표시됩니다!</strong></p>
 		        </div>
 		        <div class="container icon-box" style="display: inline-grid; grid-template-columns: repeat(4, 1fr); border: 1px solid #ffb727; margin-bottom:20px;">
 		              <div class="item check"><label id="label"><input type="checkbox" id="CT1" name="checkbox">자연경관</label></div>
@@ -61,7 +61,7 @@
 			var map;
 			
 			// 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-			var infowindow = new kakao.maps.InfoWindow({zIndex:1});
+			var infowindow;
 		
 			// 마커를 담을 배열입니다
 			var markers;
@@ -72,6 +72,7 @@
 			let count = 0;
 			var checkedList = [];
 			let pageCount = 1;
+			var geoMarker;
 			
 			const POSTS_PER_PAGE = [[${POSTS_PER_PAGE}]];
 			const PAGE_PER_BLOCK = [[${PAGE_PER_BLOCK}]];
@@ -105,7 +106,7 @@
 				var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 				    mapOption = {
 				        center: new kakao.maps.LatLng(geoLat, geoLng), // 지도의 중심좌표(초기값: 사용자 위치)
-				        level: 5 // 지도의 확대 레벨
+				        level: 7 // 지도의 확대 레벨
 				    };
 				
 				// 지도를 생성합니다    
@@ -115,23 +116,23 @@
 				markers = [];
 								
 				// 마우스 휠로 줌 여부
-				map.setZoomable(false);
+				map.setZoomable(true);
 				
 				var geoPosition  = new kakao.maps.LatLng(geoLat, geoLng);
-
+				
 				// 현재 위치 마커를 생성합니다
-				var geoMarker = new kakao.maps.Marker({
+				geoMarker = new kakao.maps.Marker({
 				    position: geoPosition
 				});
 				
-				// 현재 위치 마커가 지도 위에 표시되도록 설정합니다
+				// 클릭 위치 마커가 지도 위에 표시되도록 설정합니다
 				geoMarker.setMap(map);
 				
 				// 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-				var iwContent = '<div style="padding:5px; font-weight:bold;">현재 위치!</div>';
+				var iwContent = '<div style="padding:5px; font-weight:bold;">현재 위치</div>';
 
 				// 현재 위치 인포윈도우를 생성합니다
-				var infowindow = new kakao.maps.InfoWindow({
+				infowindow = new kakao.maps.InfoWindow({
 				    position : geoPosition,
 				    content : iwContent 
 				});
@@ -139,23 +140,114 @@
 				// 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
 				infowindow.open(map, geoMarker);
 				
+				// 지도에 클릭 이벤트를 등록합니다
+				// 지도를 클릭하면 마지막 파라미터로 넘어온 함수를 호출합니다
+				kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
+				    // 클릭한 위도, 경도 정보를 가져옵니다 
+				    var latlng = mouseEvent.latLng;
+				    geoLat = latlng.getLat();
+				    geoLng = latlng.getLng();
+				    console.log(geoLat, geoLng);
+                	
+				    displayMarker(geoLat, geoLng);
+				    
+				    var checkboxes = document.querySelectorAll('input[type=checkbox]');
+				    console.log(checkboxes);
+				    for (var checkbox of checkboxes) {
+				    	checkbox = document.getElementsByName("checkbox");
+						checkbox.forEach((element) => {
+			        		  if (element.checked == true) {
+			        			  checkedList.push(element.id);
+			        		     }
+				        });
+						 if(checkedList.length === 0) {
+								console.log('리스트가 비었습니다.');
+								return;
+						 }
+					    
+					 // ajax를 이용하여 checkBox event를 처리합니다.
+					    var request = $.ajax({
+					           url: "/mapCheck",
+					           type: "GET",
+					           dataType: 'json',
+					           data: {checkedList, currentNum, geoLat, geoLng}
+						});
+						//성공
+						request.done(function(viewList){
+							console.log("success");
+							currentNum = 1;
+							pageCount = 1;
+							console.log(viewList);
+							displayPagination(viewList);
+							
+						});
+						//실패
+						request.fail(function(jqXHR, textStatus, viewList){
+								console.log('반경 10km 내에 관광지가 없습니다.');
+								var listEl = document.getElementById('placesList');
+								var paginationEl = document.getElementById('pagination');
+								removeAllChildNods(listEl);
+								removeAllChildNods(paginationEl);
+								removeMarker();
+								console.log('Request failed: ' + textStatus);
+						});
+				    }
+					
+				});
+				
+
 				// 지도 확대 축소를 제어할 수 있는 줌 컨트롤을 생성합니다
 				var zoomControl = new kakao.maps.ZoomControl();
 				map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 				
 				checkbox();
+
 			}
+				function displayMarker(geoLat, geoLng) {
+					geoMarker.setMap(null);
+					infowindow.close();
+					
+					removeMarker();
+					
+					var geoPosition  = new kakao.maps.LatLng(geoLat, geoLng);
+					
+					// 클릭 위치 마커를 생성합니다
+					geoMarker = new kakao.maps.Marker({
+					    position: geoPosition
+					});
+					
+					// 클릭 위치 마커가 지도 위에 표시되도록 설정합니다
+					geoMarker.setMap(map);
+					map.setCenter(geoPosition);
+                	map.setLevel(7);
+					
+					// 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+					iwContent = '<div style="padding:5px; font-weight:bold;">선택한 위치</div>';
+
+					// 현재 위치 인포윈도우를 생성합니다
+					infowindow = new kakao.maps.InfoWindow({
+					    position : geoPosition,
+					    content : iwContent,
+					    removable : true
+					});
+					  
+					// 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+					infowindow.open(map, geoMarker);
+					
+				}
 			
 				function checkbox() {
 					/** 체크박스 이벤트 처리 */
 				    var checkboxes = document.querySelectorAll('input[type=checkbox]');
 				    for (var checkbox of checkboxes) {
+				    	
 				        checkbox.addEventListener('change', function(event) {
 				        	checkbox = document.getElementsByName("checkbox");
 							//체크박스중 체크된 체크박스를 알기 위한 객체
 							checkedList = [];
 							currentNum = 1;
 							pageCount = 1;
+							console.log("체크박스 이벤트 발생");
 				        	
 							checkbox.forEach((element) => {
 			        		  if (element.checked == true) {
@@ -163,7 +255,7 @@
 			        		     }
 				        	 });
 							 if(checkedList.length === 0) {
-								console.log('리스트가 비었습니다.');
+								console.log('체크된 리스트가 없습니다.');
 								var listEl = document.getElementById('placesList');
 								var paginationEl = document.getElementById('pagination');
 								removeAllChildNods(listEl);
@@ -176,19 +268,23 @@
 						           url: "/mapCheck",
 						           type: "GET",
 						           dataType: 'json',
-						           data: {checkedList, currentNum}
+						           data: {checkedList, currentNum, geoLat, geoLng}
 							});
 							//성공
 							request.done(function(viewList){
 								console.log("success");
-								console.log(viewList);
 								displayPagination(viewList);
-				   	 			total = viewList.length;
 								
 							});
 							//실패
 							request.fail(function(jqXHR, textStatus, viewList){
+								if(viewList.length === 0) {
+									console.log('반경 10km 내에 관광지가 없습니다.');
+									return;
+								}
+								else {
 									console.log('Request failed: ' + textStatus);
+								}
 							});
 				        })
 				    }
@@ -236,8 +332,6 @@
 			                    infowindow.close();
 			                });
 			                
-			                // 리스트에서 클릭시 그 마커로 중심좌표가 이동합니다.
-			                // @todo 중심좌표로 이동 후 그 주위에 있는 관광지 표시
 			                // 리스트 클릭시 팝업창 생성
 			                // @todo 리뷰게시판으로 이동
 			                itemEl.addEventListener('click', function() {
@@ -304,7 +398,7 @@
 					           url: "/mapCheck",
 					           type: "GET",
 					           dataType: 'json',
-					           data: {checkedList, currentNum}
+					           data: {checkedList, currentNum, geoLat, geoLng}
 						});
 						//성공
 						request.done(function(viewList){
@@ -318,10 +412,19 @@
 							console.log('Request failed: ' + textStatus);
 						});
 			        });
-
+		        	total = viewList[0].total;
+		        	var totalPage;
+		        	
+		        	if(total % POSTS_PER_PAGE === 0) {
+		        		totalPage = total / POSTS_PER_PAGE;
+		        	}
+		        	else {
+		        		totalPage = total / POSTS_PER_PAGE + 1;
+		        	}
 			        // 숫자 생성
-			        for (i = pageCount; i <= PAGE_PER_BLOCK + pageCount-1;  i++) {
+			        for (i = pageCount; i <= (PAGE_PER_BLOCK + pageCount-1) && (i < totalPage); i++) {
 			        	console.log(i, currentNum);
+
 			            var el = document.createElement('a'); // 새로운 요소 생성
 			            el.innerHTML = i;
 			            el.href = "#";
@@ -333,10 +436,7 @@
 							el.style.cssText = 'font-weight:bold;';
 							el.removeAttribute('href');
 						}
-			            
-			            if (PAGE_PER_BLOCK == (total / POSTS_PER_PAGE)) { // 페이징 블럭수 조정
-			                return false;
-			            }
+						
 
 			            // 클릭 이벤트 리스너 등록
 			            el.addEventListener('click', function() {
@@ -357,7 +457,7 @@
 						           url: "/mapCheck",
 						           type: "GET",
 						           dataType: 'json',
-						           data: {checkedList, currentNum}
+						           data: {checkedList, currentNum, geoLat, geoLng}
 							});
 							//성공
 							request.done(function(viewList){
@@ -391,7 +491,7 @@
 					           url: "/mapCheck",
 					           type: "GET",
 					           dataType: 'json',
-					           data: {checkedList, currentNum}
+					           data: {checkedList, currentNum, geoLat, geoLng}
 						});
 						//성공
 						request.done(function(viewList){
@@ -408,8 +508,6 @@
 			        displayPlaces(viewList);
 			    }
 			 
-			 
-
 				// 항목을 Element로 반환하는 함수입니다
 				function getListItem(index, viewList) {
 				    var el = document.createElement('li');
@@ -490,6 +588,8 @@
 				// 인포윈도우에 장소명을 표시합니다
 				function displayInfowindow(marker, title) {
 				    var content = '<div style="padding:5px;z-index:1;">';
+				    content += title;
+				    content += '</div>';
 				    infowindow.setContent(content);
 				    infowindow.open(map, marker);
 				}
@@ -500,24 +600,6 @@
 				        el.removeChild (el.lastChild);
 				    }
 				}
-		
-			    
-/* 		     //ajax를 이용하여 사용자가 클릭한 위도 경도 정보를 controller로 보냅니다.
-		    request = $.ajax({
-		           url: "/maplocation",
-		           type: "GET",
-		           dataType: "text",
-		           data: {"lat" : lat, "lng" : lng}
-			});
-			//성공
-			request.done(function(data){
-				console.log("success");
-				
-			});
-			//실패
-			request.fail(function(jqXHR, textStatus){
-					console.log('Request failed: ' + textStatus);
-			}); */
 			
 			
 	    /*]]>*/
