--- a/tptp/src/main/resources/templates/app/mapPopup.html
+++ b/tptp/src/main/resources/templates/app/mapPopup.html
@@ -39,60 +39,31 @@
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=30c6f2e8827ad0eaab4d3083c061ca7f&libraries=services"></script>
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-			
-			var map;
-			
-			// 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
 			var infowindow = new kakao.maps.InfoWindow({zIndex:1});
-		
-			// 마커를 담을 배열입니다
 			var markers=[];
-			
-			const POSTS_PER_PAGE = [[${POSTS_PER_PAGE}]];
-			const PAGE_PER_BLOCK = [[${PAGE_PER_BLOCK}]];
 			var regionList = [[${regionList}]];
-			
-			console.log(`한 페이지당 보여줄 수는 : ${POSTS_PER_PAGE}`);
-			console.log(`한 페이지당 보여줄 블락 수는 : ${PAGE_PER_BLOCK}`);
 			
 			var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 			    mapOption = {
 			        center: new kakao.maps.LatLng(regionList[0].lat, regionList[0].lng), // 지도의 중심좌표 -> 지역별 평균 관광지 위치 사용하는게 좋긴함
-			        level: 12 // 지도의 확대 레벨
+			        level: 11 // 지도의 확대 레벨
 			    };
 			
 			// 지도를 생성합니다    
-			map = new kakao.maps.Map(mapContainer, mapOption);
-			
-			// 지도 확대 축소를 제어할 수 있는 줌 컨트롤을 생성합니다
-			var zoomControl = new kakao.maps.ZoomControl();
-			map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+			var map = new kakao.maps.Map(mapContainer, mapOption);
 			
 			displayPlaces(regionList);
 			
 		    // 검색 결과 목록과 마커를 표출하는 함수입니다
 		    function displayPlaces(regionList) {
-
 		        // 지도에 표시되고 있는 마커를 제거합니다
-		        removeMarker();
-		        
 		        for (var i = 0; i < regionList.length; i++ ) {
 		        	// 데이터가 비어있는 경우에는 처리하지 않고 넘어갑니다
 		            if (!regionList[i]) {
 		              continue;
 		            }
-
-		            // 마커를 생성하고 지도에 표시합니다
 		            var placePosition = new kakao.maps.LatLng(regionList[i].lat, regionList[i].lng),
 		                marker = addMarker(placePosition, i, regionList[i].categoryId, regionList[i].place);
-
-		            // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
-		            // LatLngBounds 객체에 좌표를 추가합니다
-		            //bounds.extend(placePosition);
-
-		            // 마커와 검색결과 항목에 mouseover 했을때
-		            // 해당 장소에 인포윈도우에 장소명을 표시합니다
-		            // mouseout 했을 때는 인포윈도우를 닫습니다
 		            
 		            (function(marker, title) {
 		                kakao.maps.event.addListener(marker, 'mouseover', function() {
@@ -102,13 +73,9 @@
 		                kakao.maps.event.addListener(marker, 'mouseout', function() {
 		                    infowindow.close();
 		                });
-		                
-		                
+
 		            })(marker, regionList[i].place);
 		        }
-
-		        // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
-		        //map.setBounds(bounds);
 		    }
 			
 			// 마커를 생성하고 지도 위에 마커를 표시하는 함수입니다
@@ -139,24 +106,12 @@
 		
 			    return marker;
 			}
-		
-			// 지도 위에 표시되고 있는 마커를 모두 제거합니다
-			function removeMarker() {
-			    for ( var i = 0; i < markers.length; i++ ) {
-			        markers[i].setMap(null);
-			    }   
-			    markers = [];
-			}
-		
-			// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
 			// 인포윈도우에 장소명을 표시합니다
 			function displayInfowindow(marker, title) {
 			    var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
 			    infowindow.setContent(content);
 			    infowindow.open(map, marker);
-			}
-		
-			
+			}			
 	    /*]]>*/
 	</script>
 		
