23-07-20 삭제 거의 완성..

--- a/tptp/src/main/resources/templates/app/reviewPopup.html
+++ b/tptp/src/main/resources/templates/app/reviewPopup.html
@@ -152,8 +152,8 @@
                           data: {"reviewId" : reviewId, "insertPw" : insertPw}
                   });
                   //성공
-                  request.done(function(){
-                     console.log("success");
+                  request.done(function(data){
+                     data.redi
 					
                      
                   });
