23/07/21 tptpmapper 추가, index.html 변경

--- a/tptp/src/main/resources/templates/app/inforPopup.html
+++ b/tptp/src/main/resources/templates/app/inforPopup.html
@@ -4,6 +4,18 @@
 <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 <meta charset="UTF-8">
+<style>
+	span {
+		font-weight:bold;
+	}
+	h1 {
+		font-weight:bold;
+		font-size:40px;
+	}
+	h3 {
+		font-weight:bold;
+	}
+</style>
 <title>Information</title>
 </head>
 <body>
@@ -15,7 +27,7 @@
 			<table class="table">
 					<tr>
 						<th scope="col">Language</th>
-						<td>Java17.0.4.1, Python, Javascript, HTML, css</td>
+						<td>Java17.0.4.1, Python, Javascript, HTML, css, SQL</td>
 					</tr>
 					<tr>
 						<th scope="col">Tool</th>
@@ -27,7 +39,7 @@
 					</tr>
 					<tr>
 						<th scope="col">Library</th>
-						<td>Chart.js, jQuery, Bootstrap</td>
+						<td>Chart.js, jQuery, Bootstrap, NumPy, pandas, seaborn, Matplotlib, Scikit-learn</td>
 					</tr>
 					<tr>
 						<th scope="col">View Template</th>
@@ -46,30 +58,38 @@
 						<td>MySQL 8.0.28</td>
 					</tr>
 					<tr>
-						<th scope="col">SCM</th>
-						<td>GitHub, Git, SourceTree</td>
+						<th scope="col">Team Collaboration Tool</th>
+						<td>GitHub, Git, SourceTree, Notion, Google Driver, Google Docs</td>
 					</tr>
 			</table>
 		</div><br/>
 		<div class="copyright">
 			<h3># Proceedings</h3>
-	        <p><strong><span>Notion</span></strong>  <a href="https://www.notion.so/73df0b28bffe4946b6fa9dc93c82c5cb?v=72792fb00ce14781bdc2c303585e1dc9">회의</a></p>
+			<ul>
+	        <li><span>Notion</span> <a href="https://www.notion.so/73df0b28bffe4946b6fa9dc93c82c5cb?v=72792fb00ce14781bdc2c303585e1dc9">6월 회의록</a></li>
+	        <li><span>Notion</span> <a href="https://docs.google.com/document/d/1ALH2vdF2Yc7eQJiXs2o6DZxxxUUUwtO4gfqKh-O0yDA/edit?pli=1">7월 회의록</a></li>
+	    	</ul>
 	    </div><br/>
 		<div class="copyright">
 			<h3># Copyright</h3>
-	        <p><strong><span>BootStrap template</span></strong> <a href="https://bootstrapmade.com/">BootstrapMade</a></p>
-	        <p><strong><span>Icon </span></strong><a href="https://www.flaticon.com/kr/" title="즐거움 아이콘">Freepik - Flaticon</a></p>
+			<ul>
+	        <li><span>BootStrap template</span> <a href="https://bootstrapmade.com/">BootstrapMade</a></li>
+	        <li><span>Icon </span><a href="https://www.flaticon.com/kr/" title="즐거움 아이콘">Freepik - Flaticon</a></li>
+	        <li><span>Icon </span><a href="https://www.flaticon.com/kr/free-icons/" title=" 아이콘">Bharat Icons - Flaticon</a></li>
+	        <li><span>Character</span> <a href="https://chrome.google.com/webstore/detail/avatar-maker/ofknlbikfofijlcjkfcihomkedmchfbn">Avatar Maker</a></li>
+	        <li><span>Header Image</span> <a href="https://korean.visitseoul.net/index">서울관광재단</a></li>
+	        <li><span>Footer Image</span> <a href="https://pixabay.com/ko/">pixabay</a></li>
+	        </ul>
 	    </div><br/>
 	    <div class="credits">
 	    	<h3># Reference</h3>
-	    	<p><strong><span>URL</span></strong></p>
-	    	<ol>
+	    	<ul>
 	    		<li><a href="https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html">SPRING PROPERTIES</a></li>
 	    		<li><a href="https://www.thymeleaf.org/">Thymeleaf</a></li>
 	    		<li><a href="https://getbootstrap.com/">BootStrap</a></li>
 	    		<li><a href="https://www.culture.go.kr/bigdata/user/main.do">문화빅데이터</a></li>
 	    		<li><a href="https://apis.map.kakao.com/">카카오 맵 API</a></li>
-	    	</ol>
+	    	</ul>
 	    </div>
 	</div>
 
