--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -26,7 +26,7 @@
 				 <div class="section-title">
 		          <span>MAP</span>
 		          <h2>MAP</h2>
-		          <p><strong>가고 싶은 관광지를 클릭하면 반경 10km 이내의 관광지가 모두 표시됩니다!</strong></p>
+		          <p><strong>가고 싶은 여행지를 클릭하면 반경 10km 이내의 여행지가 모두 표시됩니다!</strong></p>
 		        </div>
 		        <div class="container icon-box" style="display: inline-grid; grid-template-columns: repeat(4, 1fr); border: 1px solid #ffb727; margin-bottom:20px;">
 		              <div class="item check"><label id="label"><input type="checkbox" id="CT1" name="checkbox">자연경관</label></div>
@@ -329,8 +329,6 @@
 			                    
 			                });
 			                
-			                // 리스트 클릭시 팝업창 생성
-			                // @todo 리뷰게시판으로 이동
 			                itemEl.addEventListener('click', function() {
 			                	var thisLat = $(this).find('.thisLat')[0].innerText;
 			                	var thisLng = $(this).find('.thisLng')[0].innerText;
